# agent-on-the-fly

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  turbo.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/aotf-cli/: Cargo.toml
crates/aotf-cli/src/: main.rs  paths.rs
crates/aotf-cli/src/commands/: audit.rs  doctor.rs  init.rs  mod.rs  watch.rs
crates/aotf-core-types/: Cargo.toml
crates/aotf-core-types/src/: lib.rs
crates/aotf-core-types/tests/: round_trip.rs
crates/aotf-gatekeeper/: Cargo.toml  mutants.toml
crates/aotf-gatekeeper/src/: gate.rs  main.rs  tier_map.rs
crates/aotf-gatekeeper/tests/: all_tiers.rs
crates/aotf-ipc-protocol/: Cargo.toml
crates/aotf-ipc-protocol/src/: lib.rs  methods.rs  wire.rs
crates/aotf-ipc-protocol/tests/: snapshots.rs
crates/aotf-ipc-protocol/tests/snapshots/: snapshots__error_codes.snap  snapshots__method_namespace.snap  snapshots__request_shape.snap  snapshots__response_failure_shape.snap  snapshots__response_success_shape.snap
crates/aotf-mcp-server/: Cargo.toml
crates/aotf-mcp-server/src/: main.rs
crates/aotf-plugin-api/: Cargo.toml
crates/aotf-plugin-api/src/: lib.rs
crates/aotf-storage/: Cargo.toml
crates/aotf-storage/src/: audit.rs  lib.rs
crates/aotf-storage/src/migrations/: 0001_init.sql
crates/aotf-storage/tests/: audit_append_only.rs
crates/aotfd/: Cargo.toml
crates/aotfd/src/: ipc_server.rs  lib.rs  main.rs  watcher.rs
crates/aotfd/tests/: integration_watch.rs
docs/: PRD.md  architecture.md  epics.md  product-brief.md  ux-research-inputs.md
fixtures/finding-v1/: invalid_missing_tier.json  valid_full.json  valid_minimal.json
scripts/: e2e_demo.sh  install.sh
