[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.2-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Hieu Trung Dao <hieutrungdao.cs@gmail.com>"]
repository = "https://github.com/hieutrungdao/agent-on-the-fly"
homepage = "https://github.com/hieutrungdao/agent-on-the-fly"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util", "process", "signal"] }
clap = { version = "4", features = ["derive"] }
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl", "uuid-impl"] }
insta = { version = "1", features = ["json"] }
tempfile = "3"
uuid = { version = "1", features = ["v7", "serde"] }

aotf-core-types = { path = "crates/aotf-core-types" }
aotf-ipc-protocol = { path = "crates/aotf-ipc-protocol" }
aotf-storage = { path = "crates/aotf-storage" }
aotf-plugin-api = { path = "crates/aotf-plugin-api" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
