[package]
name = "aotf-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AOTF CLI: thin client for the daemon."

[[bin]]
name = "aotf"
path = "src/main.rs"

[dependencies]
aotf-core-types = { workspace = true }
aotf-ipc-protocol = { workspace = true }
aotf-storage = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
