[package]
name = "aotf-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AOTF MCP server stub (read-only in v1.0; not implemented in walking skeleton)."

[[bin]]
name = "aotf-mcp-server"
path = "src/main.rs"

[dependencies]
