[package]
name = "aotf-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite WAL connection and append-only audit log for AOTF."

[dependencies]
aotf-core-types = { workspace = true }
aotf-ipc-protocol = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
