[package]
name = "aotfd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AOTF daemon: file watchers, plugin loader, IPC server."

[[bin]]
name = "aotfd"
path = "src/main.rs"

[dependencies]
aotf-core-types = { workspace = true }
aotf-ipc-protocol = { workspace = true }
aotf-storage = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
